package gu.java.pattern.create.factory;

/**
 * 铁匠接口
 */
public interface Blacksmith {
    Weapon manufactureWeapon(WeaponType weaponType);
}
