package gu.java.pattern.create.factory;

/**
 * 武器接口
 */
public interface Weapon {

    WeaponType getWeaponType();
}
